crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_nested.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "foo ",
            is_raw: false,
            quote_kind: Double,
        },
        2..6,
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        FStringStart(
            Double,
        ),
        7..9,
    ),
    (
        FStringMiddle {
            value: "bar ",
            is_raw: false,
            quote_kind: Double,
        },
        9..13,
    ),
    (
        Lbrace,
        13..14,
    ),
    (
        Name {
            name: "x",
        },
        14..15,
    ),
    (
        Plus,
        16..17,
    ),
    (
        FStringStart(
            Double,
        ),
        18..20,
    ),
    (
        Lbrace,
        20..21,
    ),
    (
        Name {
            name: "wow",
        },
        21..24,
    ),
    (
        Rbrace,
        24..25,
    ),
    (
        FStringEnd(
            Double,
        ),
        25..26,
    ),
    (
        Rbrace,
        26..27,
    ),
    (
        FStringEnd(
            Double,
        ),
        27..28,
    ),
    (
        Rbrace,
        28..29,
    ),
    (
        FStringMiddle {
            value: " baz",
            is_raw: false,
            quote_kind: Double,
        },
        29..33,
    ),
    (
        FStringEnd(
            Double,
        ),
        33..34,
    ),
    (
        FStringStart(
            Single,
        ),
        35..37,
    ),
    (
        FStringMiddle {
            value: "foo ",
            is_raw: false,
            quote_kind: Single,
        },
        37..41,
    ),
    (
        Lbrace,
        41..42,
    ),
    (
        FStringStart(
            Single,
        ),
        42..44,
    ),
    (
        FStringMiddle {
            value: "bar",
            is_raw: false,
            quote_kind: Single,
        },
        44..47,
    ),
    (
        FStringEnd(
            Single,
        ),
        47..48,
    ),
    (
        Rbrace,
        48..49,
    ),
    (
        FStringMiddle {
            value: " some ",
            is_raw: false,
            quote_kind: Single,
        },
        49..55,
    ),
    (
        Lbrace,
        55..56,
    ),
    (
        FStringStart(
            Double,
        ),
        56..58,
    ),
    (
        FStringMiddle {
            value: "another",
            is_raw: false,
            quote_kind: Double,
        },
        58..65,
    ),
    (
        FStringEnd(
            Double,
        ),
        65..66,
    ),
    (
        Rbrace,
        66..67,
    ),
    (
        FStringEnd(
            Single,
        ),
        67..68,
    ),
    (
        Newline,
        68..68,
    ),
]
