crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_parentheses.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        Lbrace,
        2..3,
    ),
    (
        Rbrace,
        3..4,
    ),
    (
        FStringEnd(
            Double,
        ),
        4..5,
    ),
    (
        FStringStart(
            Double,
        ),
        6..8,
    ),
    (
        FStringMiddle {
            value: "{}",
            is_raw: false,
            quote_kind: Double,
        },
        8..12,
    ),
    (
        FStringEnd(
            Double,
        ),
        12..13,
    ),
    (
        FStringStart(
            Double,
        ),
        14..16,
    ),
    (
        FStringMiddle {
            value: " ",
            is_raw: false,
            quote_kind: Double,
        },
        16..17,
    ),
    (
        Lbrace,
        17..18,
    ),
    (
        Rbrace,
        18..19,
    ),
    (
        FStringEnd(
            Double,
        ),
        19..20,
    ),
    (
        FStringStart(
            Double,
        ),
        21..23,
    ),
    (
        FStringMiddle {
            value: "{",
            is_raw: false,
            quote_kind: Double,
        },
        23..25,
    ),
    (
        Lbrace,
        25..26,
    ),
    (
        Rbrace,
        26..27,
    ),
    (
        FStringMiddle {
            value: "}",
            is_raw: false,
            quote_kind: Double,
        },
        27..29,
    ),
    (
        FStringEnd(
            Double,
        ),
        29..30,
    ),
    (
        FStringStart(
            Double,
        ),
        31..33,
    ),
    (
        FStringMiddle {
            value: "{{}}",
            is_raw: false,
            quote_kind: Double,
        },
        33..41,
    ),
    (
        FStringEnd(
            Double,
        ),
        41..42,
    ),
    (
        FStringStart(
            Double,
        ),
        43..45,
    ),
    (
        FStringMiddle {
            value: " ",
            is_raw: false,
            quote_kind: Double,
        },
        45..46,
    ),
    (
        Lbrace,
        46..47,
    ),
    (
        Rbrace,
        47..48,
    ),
    (
        FStringMiddle {
            value: " {} {",
            is_raw: false,
            quote_kind: Double,
        },
        48..56,
    ),
    (
        Lbrace,
        56..57,
    ),
    (
        Rbrace,
        57..58,
    ),
    (
        FStringMiddle {
            value: "} {{}}  ",
            is_raw: false,
            quote_kind: Double,
        },
        58..71,
    ),
    (
        FStringEnd(
            Double,
        ),
        71..72,
    ),
    (
        Newline,
        72..72,
    ),
]
