crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_prefix.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringEnd(
            Double,
        ),
        2..3,
    ),
    (
        FStringStart(
            Double,
        ),
        4..6,
    ),
    (
        FStringEnd(
            Double,
        ),
        6..7,
    ),
    (
        FStringStart(
            Double,
        ),
        8..11,
    ),
    (
        FStringEnd(
            Double,
        ),
        11..12,
    ),
    (
        FStringStart(
            Double,
        ),
        13..16,
    ),
    (
        FStringEnd(
            Double,
        ),
        16..17,
    ),
    (
        FStringStart(
            Double,
        ),
        18..21,
    ),
    (
        FStringEnd(
            Double,
        ),
        21..22,
    ),
    (
        FStringStart(
            Double,
        ),
        23..26,
    ),
    (
        FStringEnd(
            Double,
        ),
        26..27,
    ),
    (
        FStringStart(
            Double,
        ),
        28..31,
    ),
    (
        FStringEnd(
            Double,
        ),
        31..32,
    ),
    (
        FStringStart(
            Double,
        ),
        33..36,
    ),
    (
        FStringEnd(
            Double,
        ),
        36..37,
    ),
    (
        FStringStart(
            Double,
        ),
        38..41,
    ),
    (
        FStringEnd(
            Double,
        ),
        41..42,
    ),
    (
        FStringStart(
            Double,
        ),
        43..46,
    ),
    (
        FStringEnd(
            Double,
        ),
        46..47,
    ),
    (
        Newline,
        47..47,
    ),
]
