crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_single_quote_escape_unix_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(UNIX_EOL)
---
[
    (
        FStringStart(
            Single,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "text \\\n more text",
            is_raw: false,
            quote_kind: Single,
        },
        2..19,
    ),
    (
        FStringEnd(
            Single,
        ),
        19..20,
    ),
    (
        Newline,
        20..20,
    ),
]
