crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(WINDOWS_EOL)
---
[
    (
        FStringStart(
            Single,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "text \\\r\n more text",
            is_raw: false,
            quote_kind: Single,
        },
        2..20,
    ),
    (
        FStringEnd(
            Single,
        ),
        20..21,
    ),
    (
        Newline,
        21..21,
    ),
]
