crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_with_ipy_escape_command.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "foo ",
            is_raw: false,
            quote_kind: Double,
        },
        2..6,
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        Exclamation,
        7..8,
    ),
    (
        Name {
            name: "pwd",
        },
        8..11,
    ),
    (
        Rbrace,
        11..12,
    ),
    (
        FStringMiddle {
            value: " bar",
            is_raw: false,
            quote_kind: Double,
        },
        12..16,
    ),
    (
        FStringEnd(
            Double,
        ),
        16..17,
    ),
    (
        Newline,
        17..17,
    ),
]
