crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_with_nul_char.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Single,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "\\0",
            is_raw: false,
            quote_kind: Single,
        },
        2..4,
    ),
    (
        FStringEnd(
            Single,
        ),
        4..5,
    ),
    (
        Newline,
        5..5,
    ),
]
